# mpir-shim

./: .gitignore  Makefile.am  NEWS  README.md  VERSION  autogen.sh  configure.ac  mpir.cxx
config/: Makefile.am  mpirshim_c_get_alignment.m4  mpirshim_case_sensitive_fs_setup.m4  mpirshim_check_alt_short_float.m4  mpirshim_check_attributes.m4  mpirshim_check_compiler_version.m4  mpirshim_check_compiler_works.m4  mpirshim_check_icc.m4  mpirshim_check_ident.m4  mpirshim_check_offsetof.m4  mpirshim_check_os_flavors.m4  mpirshim_check_pthread_pids.m4  mpirshim_check_vendor.m4  mpirshim_check_version.m4  mpirshim_check_visibility.m4  mpirshim_check_withdir.m4  mpirshim_config_pthreads.m4  mpirshim_config_threads.m4  mpirshim_cxx_find_exception_flags.m4  mpirshim_cxx_find_template_parameters.m4  mpirshim_cxx_find_template_repository.m4  mpirshim_cxx_have_exceptions.m4  mpirshim_ensure_contains_optflags.m4  mpirshim_functions.m4  mpirshim_get_version.m4  mpirshim_get_version.m4sh  mpirshim_interix.m4  mpirshim_lang_link_with_c.m4  mpirshim_save_version.m4  mpirshim_setup_cc.m4  mpirshim_setup_cxx.m4  mpirshim_setup_pmix.m4  mpirshim_setup_rpath.m4  mpirshim_summary.m4
src/: Makefile.am  mpir.cxx  mpirc.c  mpirshim.c
src/include/: mpirshim.h  mpirshim_config.h.in  mpirshim_config_bottom.h  mpirshim_config_top.h  mpirshim_test.h  version.h.in
test/: Makefile.am  mpirshim_test.c
